2. Improving the splash image.
27 June
1. Fixed ref to page up/down keys in help.

28 June
1. Upon reflection, the arrow keys are easier than page up/down. So, I added CTRL as a modifier. Now it's ctrl+left/right to step through the pages. (Help updated too.)

29 June
1. Repaired the .desktop file to comply with HIG.

30 June
1. Changed selection menu item toggling system. Recently read a little Gnome HIG :)

1 July
1. Changed logo in help, about and splash.
2. Altered setup.py to remove MANIFEST file if it's there. Unless it's removed, setup.py sdist will potentially miss new files.

6 July 2009
1. Fixed a problem with setup.py that was making ~/.fontypython folder (and as root too). That folder now only gets made when the app is run for the first time, not during setup. Thanks to Pietro for catching this one.

7 July
1. Pietro sent us an Italian .po file. I did "make mos" and I hope that was right.
2. Removed some _() stuff from CORNER CASE error messages.
3. Redacted pofiles/README file somewhat.

24 July
1. A bug was caught by Michael Hoeft - the combo box (for search field) requires wxPython 2.8 -- So we had to shift a few things around. After a false start, I have created version 0.4.1 and am about to upload to the ftp site.

15 Sept 2009
1. Fixed a bug where fonts that are already installed would refuse to install again. It ignores OSError 17 now.
2. Added zip function -- zip all fonts in a pog(s) for easy distribution.
3. Moved to vers 0.4.2

16 Sept
1. Removed irritating message dialogs from zip function.
2. Removed pofiles directory from MANIFEST.in so they do not go into the tarball
3. There is a weird bug in the zip files -- when you unzip one there are odd files that want renaming... Not sure what this is yet.
4. Changed File menu to Tools menu.
5. Added error catch and report to zip.
6. Improved directory dialogue for zip.
7. Fixed help file and image.